--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start:dev": "NODE_ENV=developement nodemon server.js",
     "start:prod": "NODE_ENV=production nodemon server.js",
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -18,6 +19,13 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.0",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "path-browserify": "^1.0.1"
+  },
+  "devDependencies": {
+    "html-webpack-plugin": "^5.5.1",
+    "node-gyp": "^9.3.1",
+    "webpack": "^5.81.0",
+    "webpack-cli": "^5.0.2"
   }
 }
