add auth flow for backend

--- a/server/config.env
+++ b/server/config.env
@@ -2,3 +2,8 @@ NODE_ENV=developement
 DATABASE=mongodb+srv://marquessmalley:GvoNZegve8HnCwWy@cluster0.4ggpj9a.mongodb.net/mistrain-db
 JWT_SECRET=my-jwt:secret:&dflmbdfdfghg&Vbdlfbld:Dfgoirjthoirjtgjh9o4tjglerkg0345
 JWT_EXPIRES=20d
+JWT_COOKIE_EXPIRES_IN=90
+EMAIL_HOST=sandbox.smtp.mailtrap.io
+EMAIL_PORT=2525
+EMAIL_USERNAME=2e07660939e7ee
+EMAIL_PASSWORD=8e0376dfd6bd76
