--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "nodemon": "^2.0.22",
     "npm": "^9.6.5",
     "path-browserify": "^1.0.1",
+    "validator": "^13.9.0",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
